Enable making a sync test fixture async and vice versa